CSS: Fixed text overflow bug on idea tiles

--- a/css/list.less
+++ b/css/list.less
@@ -61,6 +61,11 @@
 				color: #000;
 				text-decoration: none;
 			}
+			h3, p {
+				overflow: hidden;
+				text-overflow: ellipsis;
+			}
+			
 			.duration {
 				background-color: #EC0000;
 				background-image: url('/img/clock_white.svg');
